--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "google-keep-clone",
+  "homepage": "https://chrisj79.github.io/google-keep-clone", 
   "version": "0.1.0",
   "private": true,
   "dependencies": {
