--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "google-keep-clone",
-  "homepage": "https://chrisj79.github.io/google-keep-clone",
+  "homepage": "https://chrisj79.github.io/google-keep-clone", 
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0"
@@ -17,7 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"    
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,8 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^2.2.0"
   }
 }
